1.5.2 修正部分问题 更新设置界面 添加了关闭按钮,关于按钮 去除了系统托盘 优化了值日生添加方式