@@ -3,6 +3,7 @@ package com.wmp.panel.attendance.panel;
 import com.wmp.CTColor;
 import com.wmp.classtools.CTComponent.CTPanel;
 import com.wmp.io.IOStreamForInf;
+import com.wmp.tools.PeoPanelProcess;
 
 import javax.swing.*;
 import java.awt.*;
@@ -10,6 +11,7 @@ import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class ATPanel extends CTPanel {
 
@@ -72,27 +74,11 @@ public class ATPanel extends CTPanel {
 
         initLateList();
 
-        /*ImageIcon imageIcon = new ImageIcon(getClass().getResource("/image/settings.png"));
-        imageIcon.setImage(imageIcon.getImage().getScaledInstance(30, 30, Image.SCALE_DEFAULT));
-        CTButton settings = new CTButton(imageIcon,30,() -> {
 
-
-            new InfSetDialog(this, LeaveListPath, () -> {
-                try {
-                    refreshAttendanceData(); // 自定义刷新方法
-                } catch (IOException ex) {
-                    ex.printStackTrace();
-                }
-            }).setVisible(true);
-        });
-
-        settings.setLocation(200, 0);
-
-        this.add(settings);*/
     }
 
     private void initLateList() {
-        StringBuilder sb = new StringBuilder();
+        /*StringBuilder sb = new StringBuilder();
         sb.append("<html>");
 
         int size = leaveList.size();
@@ -114,19 +100,32 @@ public class ATPanel extends CTPanel {
             }
         }
 
-        sb.append("</html>");
+        sb.append("</html>");*/
+
+        if (leaveList.isEmpty()) {
+            personLabel.setText("<html>无请假人员</html>");
+            personLabel.setFont(new Font("微软雅黑", Font.BOLD, 23));
+            personLabel.setForeground(CTColor.mainColor);
+            personLabel.setBounds(5, ATPanelMixY, 250, 30);
+            ATPanelMixY = ATPanelMixY + personLabel.getHeight();
+            this.add(personLabel);
+       }else {
+            Object[] objects = PeoPanelProcess.getPeopleName(leaveList);
+
+            personLabel.setText(String.valueOf(objects[0]));
+            personLabel.setFont(new Font("微软雅黑", Font.BOLD, 23));
+            personLabel.setForeground(CTColor.mainColor);
+            personLabel.setBounds(5, ATPanelMixY, 250, 30 * Integer.parseInt(String.valueOf(objects[1])));
+            ATPanelMixY = ATPanelMixY + personLabel.getHeight();
+
+            this.add(personLabel);
+        }
 
 
-        personLabel.setText(sb.toString());
-        personLabel.setFont(new Font("微软雅黑", Font.BOLD, 23));
-        personLabel.setForeground(CTColor.mainColor);
-        personLabel.setBounds(5, ATPanelMixY, 250, 30 * index);
-        ATPanelMixY = ATPanelMixY + personLabel.getHeight();
-
-        this.add(personLabel);
     }
 
-    public void refreshAttendanceData() throws IOException {
+    @Override
+    public void refresh() throws IOException {
         // 清空旧数据
         studentList.clear();
         leaveList.clear();
@@ -148,7 +147,6 @@ public class ATPanel extends CTPanel {
         this.setSize(250, ATPanelMixY + 5);
 
 
-
         // 强制重绘
         revalidate();
         repaint();
@@ -159,65 +157,31 @@ public class ATPanel extends CTPanel {
         {
             IOStreamForInf ioStreamForInf = new IOStreamForInf(AllStudentPath);
 
-            String inf = ioStreamForInf.GetInf();
+            String[] inf = ioStreamForInf.GetInf();
 
             //System.out.println(inf);
-            if (inf.isEmpty() || inf.equals("error")) {
+            if (inf[0].equals("error")) {
                 {
                     //将数据改为默认
-                    ioStreamForInf.SetInf("""
-                            曾世通
-                            陈昌焱
-                            陈权浩
-                            陈思源
-                            程政
-                            程睿智
-                            范祖轩
-                            贾梓瑾
-                            姜宇航
-                            赖奕鑫
-                            李宇涵
-                            林宇轩
-                            刘弘祥
-                            刘诗怡
-                            刘欣妍
-                            刘雨涵
-                            芦其松
-                            罗伟钦
-                            骆钦阳
-                            毛佳欣
-                            毛嘉锐
-                            彭靖波
-                            唐志涛
-                            万涵予
-                            万思遥
-                            万文卿
-                            万延康
-                            吴鹤轩
-                            吴宇恒
-                            吴梓豪
-                            伍子阳
-                            熊天晴
-                            徐浩
-                            晏文杰
-                            杨沛妍
-                            姚嘉鑫
-                            姚焱竣
-                            易家树
-                            俞皓天
-                            袁立志
-                            章智峰
-                            赵银涛
-                            钟世豪
-                            朱彦轩
-                            祝思哲
-                            邹子煦
-                            """);
+                    // 使用常量数组管理姓名数据
+                    final String[] DEFAULT_NAMES = {
+                            "曾世通", "陈昌焱", "陈权浩", "陈思源", "程政", "程睿智",
+                            "范祖轩", "贾梓瑄", "姜宇航", "赖奕鑫", "李宇涵", "林宇轩",
+                            "刘弘祥", "刘诗怡", "刘欣妍", "刘雨涵", "芦其松", "罗伟钦",
+                            "骆钦阳", "毛佳欣", "毛嘉锐", "彭靖波", "唐志涛", "万涵予",
+                            "万思遥", "万文卿", "万延康", "吴鹤轩", "吴宇恒", "吴梓豪",
+                            "伍子阳", "熊天晴", "徐浩", "晏文杰", "杨沛妍", "姚嘉鑫",
+                            "姚焱竣", "易家树", "俞皓天", "袁立志", "章智峰", "赵银涛",
+                            "钟世豪", "朱彦轩", "祝思哲", "邹子煦"
+                    };
+
+                    // 通过数组传递完整数据
+                    ioStreamForInf.SetInf(DEFAULT_NAMES);
                 }
 
 
             } else {
-                studentList.addAll(Arrays.asList(inf.split("\n")));
+                studentList.addAll(Arrays.asList(inf));
                 studentLength = studentList.size();
             }
         }
@@ -225,18 +189,30 @@ public class ATPanel extends CTPanel {
         //获取请假名单
         {
             IOStreamForInf ioStreamForInf = new IOStreamForInf(LeaveListPath);
-            String inf = ioStreamForInf.GetInf();
-            if (inf.isEmpty() || inf.equals("error")) {
+            String[] inf = ioStreamForInf.GetInf();
+
+            //遍历数组
+            for (String s : inf) {
+                if (s.equals("")) {
+                    continue;
+                }
+                System.out.print(s + "-");
+                //leaveList.add(s);
+            }
+            System.out.println();
+            if (inf[0].equals("error")) {
                 ioStreamForInf.SetInf("");
                 studentLateLength = 0;
             }else{
                 //leaveList.clear();
-                leaveList.addAll(Arrays.asList(inf.split(",")));
+                leaveList.addAll(List.of(inf));
                 studentLateLength = leaveList.size();
-                //System.out.println("leaveList.size():" + leaveList.size() + inf);
+                System.out.println("leaveList.size():" + leaveList.size());
             }
         }
 
 
     }
+
+
 }
